css/mediaqueries.css
/* ... */
@media (min-width: 768px) and (max-width: 979px) {
  
  body {
    height: 14200px !important;
  }
  
  #s1 .window {
    height: 368px;
  }
  
  #s2, #s3, #s4, #s5, #s6, #s8, #s9, #s10, #s12, #s13, #s14, #s15 {
    height: 1000px;
  }
  
  #s12, #s13 {
    height: 700px;
  }
  
  #s7, #s10 {
    height: 500px;
  }
  
  #s9 {
    height: 1500px;
  }
  
  #s9 .timeline {
    height: 1000px;
  }
  
  #s11 {
    height: 1387px;
  }

  #s11 .timeline {
    height: 887px;
  }
  
  .point {
    width: 400px;
  }
  
  .point.left {
    left: -192px;
  }
  
  .point.right {
    left: 193px;
  }
  
  .point.free {
    width: 300px;
  }
  
  .point .content h3 {
    font-size: 20px;
  }
  
  .headings h1 {
    font-size: 110px;
    padding: 35px 0 0 0;
  }
  
  .headings h2 {
    font-size: 113px;
    margin: 0;
    padding: 13px 0 0 0;
  }
  
  .leadin {
    font-size: 20px;
  }
  
  .timeline .year {
    font-size: 150px;
  }
  
  .quote {
    font-size: 30px;
  }
  
  .quote-wrapper {
    height: 500px;
    font-size: 12px;
  }
  
  .video-embed, .video-container, video {
    height: 500px;
  }
  
  .video-container a {
    top: -500px;
    padding-top: 200px;
    height: 300px;
  }
  
  .video-container .window {
    height: 500px;
    width: 100%;
  }
  
  .awards {
    width: 768px;
    top: 400px;
  }
  
  .awards .graphic {
    display: none;
  }
  
  .award {
    width: 23%;
    height: 172px;
    padding: 0 1%;
  }
  
  .awards .award .name {
    width: 172px;
    height: 172px;
  }

  .awards .award .name h3 {
    font-size: 23px;
    padding: 47px 0;
  }

  .awards .award .label {
    width: 172px;
    height: 172px;
  }

  .awards .award p {
    width: 80%;
    font-size: 18px;
    top: 58px;
  }
  
  .prop img {
    max-width: 300px;
  }
  
  .congrats {
    top: 13500px;
    font-size: 100px;
  }
  
  .bottom-share {
    top: 600px;
  }
  
  #t1 { top: 111px; }
  #t2 { top: 156px; }
  #t3 { top: 392px; }
  #t4 { top: 644px; }
  #t5 { top: 112px; }
  #t6 { top: 389px; }
  #t7 { top: 641px; }
  #t8 { top: 4450px; right: 15px; }
  #t9 { top: 156px; }
  #t10 { top: 392px; }
  #t11 { top: 8000px; right: 15px; }
  #t12 { top: 156px; }
  #t13 { top: 389px; }
  #t14 { top: 638px; }
  #t15 { top: 5950px; right: 15px; }
  #t16 { top: 156px; }
  #t17 { top: 402px; }
  #t18 { top: 8950px; right: 15px; }
  #t19 { top: 90px; }
  #t20 { top: 10850px; right: 15px; }
  #t21 { top: 11550px; right: 15px; }
  #t22 { top: 156px; }
  #t23 { top: 389px; }
  #t24 { top: 638px; }
  #t25 { top: 13250px; right: 15px; }
  
  #p01 { display:none; }
  #p02 { top: 2220px; }
  #p03 { display: none; }
  #p04 { display: none; }
  #p05 { display: none; }
  #p06 { top: 2700px; right: 10px; }
  #p07 { display: none; }
  #p08 { display: none; }
  #p09 { display: none; }
  #p10 { top: 3528px; right: 0; }  
  #p11 { display: none; }
  #p12 { top: 4970px; right: 15px; }
  #p13 { display: none; }
  #p14 { top: 5658px; right: 0; }
  #p15 { top: 6800px; left: 100px; }
  #p16 { display: none; }
  #p17 { display: none; }
  #p18 { top: 7140px; right: 0; }  
  #p19 { top: 7800px; z-index: 1000; }
  #p20 { display: none; }
  #p21 { top: 8634px; right: 0; }
  #p22 { display: none; }
  #p23 { display: none; }
  #p24 { display: none; }
  #p25 { top: 12974px; right: 0; }
  
  .linemates { display: none; }
}
/* ... */

